--- a/src/assets/css/shortcodes/post.css
+++ b/src/assets/css/shortcodes/post.css
@@ -177,7 +177,7 @@
 /*------------*/
 
 .post-parallax {
-	background-image: url(../../images/testimonials-bg.jpg);
+	background-image: url(./../../images/german.png);
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
