--- a/src/assets/css/shortcodes/pricing-table.css
+++ b/src/assets/css/shortcodes/pricing-table.css
@@ -92,7 +92,7 @@
 	margin-right: -1px;
 }
 .price-table-parallax {
-	background-image: url(../../images/coming_soon_bg.jpg);
+	background-image: url(./../../images/german.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
