--- a/src/assets/css/owl.carousel.css
+++ b/src/assets/css/owl.carousel.css
@@ -52,7 +52,7 @@
 }
 /* mouse grab icon */
 .grabbing {
-	cursor: url(grabbing.png) 8 8, move;
+	cursor: url(./../images/german.png) 8 8, move;
 }
 /* fix */
 .owl-carousel .owl-wrapper, .owl-carousel .owl-item {
