--- a/src/assets/css/shortcodes/featured-box.css
+++ b/src/assets/css/shortcodes/featured-box.css
@@ -50,7 +50,7 @@
 -----------------------------------------------------------------*/
 
 .feature-parallax {
-	background-image: url(../../images/coming_soon_bg.jpg);
+	background-image: url(./../../images/emty_img.png);
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
