--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -34,8 +34,8 @@
                 <h1>{{product.productName}}</h1>
               </div>
               <div class="price-box">
-                <p class="special-price"> <span class="price-label">Special Price</span> <span class="price"> $329.99 </span> </p>
-                <p class="old-price"> <span class="price-label">Regular Price:</span> <span class="price"> $359.99 </span> </p>
+                <p class="special-price"> <span class="price-label">Special Price</span> <span class="price"> {{product.promotionPrice | currency: "VND"}}</span> </p>
+                <p class="old-price"> <span class="price-label">Regular Price:</span> <span class="price">{{product.price | currency: "VND"}} </span> </p>
               </div>
               <div class="ratings">
                 <div class="rating"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> </div>
