--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -6,13 +6,13 @@
         </div>
         <span class="mm-label">All Categories</span>
       </div>
-      <div class="col-md-3 col-sm-3 mega-container hidden-xs">
+      <div (click)="toggleHandle($event)" class="col-md-3 col-sm-3 mega-container hidden-xs">
         <div class="navleft-container">
-          <div class="mega-menu-title" [ngStyle]="{'style':'none !important'}">
+          <div class="mega-menu-title">
             <h3><span>All Categories</span></h3>
           </div>
           <!-- Shop by category -->
-          <div class="mega-menu-category" *ngFor="let item of allMenu">
+          <div class="mega-menu-category" id="mega-menu-category" *ngFor="let item of allMenu">
             <ul class="nav">
               <li><a (click)="handleMenu($event,item)" [routerLink]="['/danh-muc-san-pham-g']">{{item.categoryName}}</a>
                   <div class="wrap-popup">
