update menu, fix css, fixbug

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,11 @@
 .header-top a {
     color: #333333;
 }
+.logoImg{
+    width: 100% !important; 
+	max-width: 150px !important;
+	max-height: 90px !important;
+	height: auto !important;	
+    display: block;
+    margin: auto;
+}
