--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -62,10 +62,10 @@
       <div class="header-inner">
         <div class="container">
           <div class="row">
-            <div class="col-sm-3 col-xs-12 jtv-logo-block"> 
+            <div class="col-sm-3 col-xs-12 jtv-logo-block" style="height: auto;"> 
               
               <!-- Header Logo -->
-              <div class="logo"><a title="e-commerce" [routerLink]="['/home']"><img alt="ShopMart" title="ShopMart" src="./../assets/images/logo.png"></a> </div>
+              <div class="logo"><a title="e-commerce" [routerLink]="['/home']"><img class="logoImg" alt="ShopMart" title="ShopMart" [src]="urlImage"></a> </div>
             </div>
             <div class="col-xs-12 col-sm-5 col-md-6 jtv-top-search"> 
               
