--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12">
           <ul>
             <li class="home"> <a title="Go to Home Page" [routerLink]="['/']" routerLinkActive="router-link-active" >Home</a><span>&raquo;</span></li>
-            <li class=""> <a title="Go to Home Page" href="shop_grid.html">Fashion</a><span>&raquo;</span></li>
+            <li class=""> <a title="Go to Home Page" href="shop_grid.html">{{categoryName}}</a><span>&raquo;</span></li>
             <li><strong>{{product.productName}}</strong></li>
           </ul>
         </div>
