--- a/src/app/product-grid/product-grid.component.html
+++ b/src/app/product-grid/product-grid.component.html
@@ -5,8 +5,7 @@
         <div class="col-xs-12">
           <ul>
             <li class="home"> <a title="Go to Home Page" [routerLink]="['/']">Home</a><span>&raquo;</span></li>
-            <li class=""> <a title="Go to Home Page" [routerLink]="['/danh-muc-san-pham-g']">Smartphone</a><span>&raquo;</span></li>
-            <li><strong>{{categoryName}}</strong></li>
+            <li class=""><a title="Go to {{categoryName}}" [routerLink]="['/danh-muc-san-pham-g']">{{categoryName}}</a></li>
           </ul>
         </div>
       </div>
@@ -99,7 +98,7 @@
                           <div class="item-content">
                             <div class="rating"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> </div>
                             <div class="item-price">
-                              <div class="price-box"> <span class="regular-price"> <span class="price">$125.00</span> </span> </div>
+                              <div class="price-box"> <span class="regular-price"> <span class="price">{{item.price | currency: "VND" }}</span> </span> </div>
                                <ng-container *ngIf="item.promotionPrice == 0">
                                 <p class="special-price"> <span class="price-label">Giá khuyến mãi</span> <span class="price"> {{item.promotionPrice | currency: "VND" }} </span> </p>
                                 <p class="old-price"> <span class="price-label">Giá cũ:</span> <span class="price"> {{item.price | currency: "VND" }} </span> </p>
