--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,10 @@
 @import url('./assets/css/font-awesome.min.css');
 @import url('./assets/css/simple-line-icons.css');
 @import url('./assets/css/pe-icon-7-stroke.min.css');
+/* 
 @import url('./assets/css/owl.carousel.css');
-@import url('./assets/css/owl.transitions.css');
+@import url('./assets/css/owl.transitions.css'); */
+
 @import url('./assets/css/flexslider.css');
 @import url('./assets/css/jquery-ui.css');
 @import url('./assets/css/revolution-slider.css');
@@ -19,3 +21,10 @@
 @import url('./assets/css/shortcodes/post.css');
 @import url('./assets/css/style.css');
 @import url('./assets/css/responsive.css');
+/* 
+@import  url('~/node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.carousel');
+@import  url('~/node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.theme.default'); */
+/* 
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+ */
