--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -12,7 +12,7 @@
             <h3><span>All Categories</span></h3>
           </div>
           <!-- Shop by category -->
-          <div class="mega-menu-category" id="mega-menu-category" *ngFor="let item of allMenu">
+          <div class="mega-menu-category" [style.display]="isShowMenu ? 'block' : 'none'" id="mega-menu-category" *ngFor="let item of allMenu">
             <ul class="nav">
               <li><a (click)="handleMenu($event,item)" [routerLink]="['/danh-muc-san-pham-g']">{{item.categoryName}}</a>
                   <div class="wrap-popup">
@@ -247,23 +247,9 @@
         <div class="mtmegamenu">
           <ul class="hidden-xs">
             <li class="mt-root demo_custom_link_cms">
-              <div class="mt-root-item"><a href="index.html">
+              <div class="mt-root-item"><a [routerLink]="['/']">
                   <div class="title title_font"><span class="title-text">Home</span></div>
                 </a></div>
-              <ul class="menu-items col-md-3 col-sm-4 col-xs-12">
-                <li class="menu-item depth-1">
-                  <div class="title"> <a href="index.html"><span>Home Version 1</span></a></div>
-                </li>
-                <li class="menu-item depth-1">
-                  <div class="title"> <a href="version2/index.html"><span>Home Version 2</span></a></div>
-                </li>
-                <li class="menu-item depth-1">
-                  <div class="title"> <a href="version3/index.html"><span>Home Version 3</span></a></div>
-                </li>
-                <li class="menu-item depth-1">
-                  <div class="title"> <a href="version4/index.html"><span>Home Version 4</span></a></div>
-                </li>
-              </ul>
             </li>
             <li class="mt-root">
               <div class="mt-root-item"><a href="#">
@@ -503,3 +489,4 @@
     </div>
   </div>
 </nav>
+<ngx-spinner [fullScreen] = "true" type="ball-scale-multiple" bdColor="rgba(220, 237, 255, 0.8)" color="#0b499c"></ngx-spinner>
