--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('./assets/css/bootstrap.min.css');
-@import url('./assets/css/animate.css');
-@import url('./assets/css/font-awesome.min.css');
-@import url('./assets/css/simple-line-icons.css');
-@import url('./assets/css/pe-icon-7-stroke.min.css');
-@import url('./assets/css/owl.carousel.css');
-@import url('./assets/css/owl.transitions.css');
-@import url('./assets/css/flexslider.css');
-@import url('./assets/css/jquery-ui.css');
-@import url('./assets/css/revolution-slider.css');
-@import url('./assets/css/quick_view_popup.css');
-@import url('./assets/css/blog.css');
-@import url('./assets/css/shortcode.css');
-@import url('./assets/css/shortcodes/shortcodes.css');
-@import url('./assets/css/shortcodes/featured-box.css');
-@import url('./assets/css/shortcodes/pricing-table.css');
-@import url('./assets/css/shortcodes/tooltip.css');
-@import url('./assets/css/shortcodes/post.css');
-@import url('./assets/css/style.css');
-@import url('./assets/css/responsive.css');
+@import url('src/assets/css/bootstrap.min.css');
+@import url('src/assets/css/animate.css');
+@import url('src/assets/css/font-awesome.min.css');
+@import url('src/assets/css/simple-line-icons.css');
+@import url('src/assets/css/pe-icon-7-stroke.min.css');
+@import url('src/assets/css/owl.carousel.css');
+@import url('src/assets/css/owl.transitions.css');
+@import url('src/assets/css/flexslider.css');
+@import url('src/assets/css/jquery-ui.css');
+@import url('src/assets/css/revolution-slider.css');
+@import url('src/assets/css/quick_view_popup.css');
+@import url('src/assets/css/blog.css');
+@import url('src/assets/css/shortcode.css');
+@import url('src/assets/css/shortcodes/shortcodes.css');
+@import url('src/assets/css/shortcodes/featured-box.css');
+@import url('src/assets/css/shortcodes/pricing-table.css');
+@import url('src/assets/css/shortcodes/tooltip.css');
+@import url('src/assets/css/shortcodes/post.css');
+@import url('src/assets/css/style.css');
+@import url('src/assets/css/responsive.css');
