--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,7 +57,7 @@
             <div id="jtv-best-sale-slider" class="product-flexslider">
               <owl-carousel-o [options]="customOptions">
                 <ng-container *ngFor="let item of listProduct?.data">
-                  <ng-template carouselSlide [id]="item.id">
+                  <ng-template carouselSlide [id]="item.id.toString()">
                     <div class="product-item">
                       <div class="item-inner">
                         <div class="product-thumbnail">
@@ -294,7 +294,7 @@
               <div id="computer-slider" class="product-flexslider hidden-buttons">
                 <owl-carousel-o [options]="customOptions">
                   <ng-container *ngFor="let item of listProduct?.data">
-                    <ng-template carouselSlide [id]="item.id">
+                    <ng-template carouselSlide [id]="item.id.toString()">
                       <div class="product-item">
                         <div class="item-inner">
                           <div class="product-thumbnail">
@@ -336,7 +336,7 @@
                 </owl-carousel-o>
                 <owl-carousel-o [options]="customOptions">
                   <ng-container *ngFor="let item of listProduct?.data">
-                    <ng-template carouselSlide [id]="item.id">
+                    <ng-template carouselSlide [id]="item.id.toString()">
                       <div class="slider-items slider-width-col4">
                         <div class="product-item">
                           <div class="item-inner">
