--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -943,18 +943,14 @@
           <div class="slider-items-products">
             <div id="our-clients-slider" class="product-flexslider hidden-buttons">
               <div class="slider-items slider-width-col6">
-
                 <owl-carousel-o [options]="customBrand">
-                  <ng-container *ngFor="let item of listTrademark?.data">
+                  <ng-container *ngFor="let item of listTrademark">
                     <ng-template carouselSlide [id]="item.id.toString()">
-
                       <div class="item"><a href="#"><img [src]="urlImg + item.imageUrl" alt="Image"></a> </div>
-
                     </ng-template>
                   </ng-container>
                 </owl-carousel-o>
               </div>
-
             </div>
           </div>
         </div>
