--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -3,11 +3,11 @@
       <div class="row">
         <div class="mm-toggle-wrap">
           <div class="mm-toggle"><i class="fa fa-align-justify"></i> </div>
-          <span class="mm-label">All Categories</span> </div>
+          <span class="mm-label">DANH MỤC SẢN PHẨM</span> </div>
         <div class="col-md-3 col-sm-3 mega-container hidden-xs">
           <div class="navleft-container">
             <div class="mega-menu-title">
-              <h3><span>All Categories</span></h3>
+              <h3><span>DANH MỤC SẢN PHẨM</span></h3>
             </div>
             
             <!-- Shop by category -->
