--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -4,12 +4,12 @@
       <div class="mm-toggle-wrap">
         <div class="mm-toggle"><i class="fa fa-align-justify"></i>
         </div>
-        <span class="mm-label">All Categories</span>
+        <span class="mm-label">DANH MỤC SẢN PHẨM</span>
       </div>
       <div (click)="toggleHandle($event)" class="col-md-3 col-sm-3 mega-container hidden-xs">
         <div class="navleft-container">
           <div class="mega-menu-title">
-            <h3><span>All Categories</span></h3>
+            <h3><span>DANH MỤC SẢN PHẨM</span></h3>
           </div>
           <!-- Shop by category -->
           <div class="mega-menu-category" [style.display]="isShowMenu ? 'block' : 'none'" id="mega-menu-category" *ngFor="let item of allMenu">
