update menu Mobile

--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="mm-toggle-wrap">
-        <div class="mm-toggle"><i class="fa fa-align-justify"></i>
+        <div (click)="handleClickMenuMobile()" class="mm-toggle"><i class="fa fa-align-justify"></i>
         </div>
         <span class="mm-label">DANH MỤC SẢN PHẨM</span>
       </div>
