--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -81,9 +81,9 @@
 body {
 	background: #fff;
 	color: #333333;
-	font-family: 'Montserrat', sans-serif;
-	font-size: 12px;
-	font-weight: 400;
+	font-family: 'Arial', sans-serif;
+	font-size: 13px;
+	font-weight: 600;
 	line-height: 1.5;
 	text-align: left;
 	-webkit-text-size-adjust: 100%;
