--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,196 +1,17 @@
-<div id="mobile-menu">
-    <ul>
-        <li><a href="index.html" class="home1">Home Pages</a>
-            <ul>
-                <li><a href="index.html"><span>Home Version 1</span></a></li>
-                <li><a href="version2/index.html"><span>Home Version 2</span></a></li>
-                <li><a href="version3/index.html"><span>Home Version 3</span></a></li>
-                <li><a href="version4/index.html"><span>Home Version 4</span></a></li>
+<div [ngStyle]="isShowMenu ?  cssOpenMenuMobile : cssCloseMenuMobile" id="mobile-menu">
+    <ul class="mobile-menu" *ngFor="let itemParen of allMenu">
+        <li>
+            <span (click)="clickIconShow(itemParen)" class="expand fa " [ngClass]="{'fa-plus':!itemParen.isExpanded,'fa-minus open':itemParen.isExpanded}" style="padding-bottom: 12.1px; padding-top: 12.1px;"></span>
+            <a [routerLink]="['/danh-muc-san-pham-g']" (click)="handleMenu($event,itemParen)" style="padding-right: 55px;" class="home1">{{itemParen.categoryName}}</a>
+            <ul [style.display]="itemParen.isExpanded ? 'block' : 'none'" *ngFor="let item of itemParen.submenu">
+                <li><a style="padding-right: 55px;" [routerLink]="['/danh-muc-san-pham-g']" (click)="handleMenu($event,item)"><span>{{item.categoryName}}</span></a></li>
             </ul>
         </li>
-        <li><a href="#">Pages</a>
-            <ul>
-                <li><a href="#">Shop Pages </a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" ><span>Grid View Category Page</span></a></li>
-                        <li><a href="shop_grid_full_width.html"><span>Grid View Full Width</span></a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-l']"><span>List View Category Page</span></a></li>
-                        <li><a href="single_product.html"><span>Full Width Product Page</span> </a></li>
-                        <li><a href="single_product_sidebar.html"><span>Product Page With Sidebar</span> </a></li>
-                        <li><a href="single_product_magnify_zoom.html"><span>Product Page Magnify Zoom</span> </a></li>
-                        <li><a href="shopping_cart.html"><span>Shopping Cart</span></a></li>
-                        <li><a href="wishlist.html"><span>Wishlist</span></a></li>
-                        <li><a href="compare.html"><span>Compare Products</span></a></li>
-                        <li><a href="checkout.html"><span>Checkout</span></a></li>
-                        <li><a href="sitemap.html"><span>Sitemap</span></a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Static Pages </a>
-                    <ul>
-                        <li><a href="about_us.html"><span>About Us</span></a></li>
-                        <li><a href="contact_us.html"><span>Contact Us</span></a></li>
-                        <li><a href="orders_list.html"><span>Orders List</span></a></li>
-                        <li><a href="order_details.html"><span>Order Details</span></a></li>
-                        <li><a href="404error.html"><span>404 Error</span> </a></li>
-                        <li><a href="faq.html"><span>FAQ Page</span></a></li>
-                        <li><a href="manufacturers.html"><span>Manufacturers</span></a></li>
-                        <li><a href="quick_view.html"><span>Quick View</span></a></li>
-                        <li><a href="dashboard.html"><span>Account Dashboard</span></a></li>
-                        <li><a href="shortcodes.html"><span>Shortcodes</span> </a></li>
-                        <li><a href="typography.html"><span>Typography</span></a></li>
-                    </ul>
-                </li>
-                <li><a href="#"> Blog Pages </a>
-                    <ul>
-                        <li><a href="blog_right_sidebar.html">Blog – Right sidebar </a></li>
-                        <li><a href="blog_left_sidebar.html">Blog – Left sidebar </a></li>
-                        <li><a href="blog_full_width.html">Blog - Full width</a></li>
-                        <li><a href="blog_single_post.html">Single post </a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li><a href="blog.html">Blog</a>
-            <ul>
-                <li><a href="blog_right_sidebar.html"> Blog – Right Sidebar </a></li>
-                <li><a href="blog_left_sidebar.html"> Blog – Left Sidebar </a></li>
-                <li><a href="blog_full_width.html"> Blog – Full-Width </a></li>
-                <li><a href="blog_single_post.html"> Single post </a></li>
-            </ul>
-        </li>
-        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >TV &amp; Audio</a>
-            <ul>
-                <li><a href="#" class="">Headphones</a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Receivers &amp; Amplifier</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Speakers Sports</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Audio CD Players</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Turntables</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Gaming Headsets</a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Accessories</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Smart TVs Speakers</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Cases &amp; Towers</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Gaming Budget</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Home Theater Systems</a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >TV &amp; Cinema</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >4K Ultra HD TVs</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Curved TVs</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Sound Bars</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Appliances</a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Refrigerators</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Vacuum Cleaners</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Irons &amp; Steamers</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Washers Dryers</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Photo &amp; Camera</a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Cameras Digital SLR</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Instant Film</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Point &amp; Shoot</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Waterproof</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Accessories</a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Cables Chargers</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Cases Backup Battery</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Meebox</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Packs Screen</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Apple Store</a>
-            <ul>
-                <li><a href="#" class="">Notebooks</a>
-                    <ul class="level1">
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Gradiente</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Samsung</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Toshiba</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Nintendo DS</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Televisions</a>
-                    <ul class="level1">
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >LCD Televisions</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Projection Televisions</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Play Stations</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Video Accessories</a></li>
-                    </ul>
-                </li>
-                <li><a href="#" class="">Computer</a>
-                    <ul class="level1">
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Laptop</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Mobile Electronics</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Movies &amp; Music</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Audio &amp; Video</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Home Theater</a>
-                    <ul class="level1">
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >LED &amp; LCD TVs</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Smart TVs</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Speakers Sound Bars</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Audio CD Players</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Accesories</a>
-                    <ul class="level1">
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Theater Systems</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Turntables</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Laptops Bags</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Gaming Headsets</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Photo &amp; Camera</a>
-            <ul>
-                <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Mobiles</a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >iPhone</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Samsung</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Nokia</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Sony</a></li>
-                    </ul>
-                </li>
-                <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active"  class="">Music &amp; Audio</a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Audio</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Cameras</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Appling</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Car Music</a></li>
-                    </ul>
-                </li>
-                <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Accessories</a>
-                    <ul>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Home &amp; Office</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >TV &amp; Home Theater</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Phones &amp; Radio</a></li>
-                        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >All Electronics</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Smartphone</a></li>
-        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Games &amp; Video</a></li>
-        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Laptop</a></li>
-        <li><a [routerLink]="['/danh-muc-san-pham-g']" routerLinkActive="router-link-active" >Accessories</a></li>
     </ul>
 </div>
-<div id="page">
+<div id="page" [style.left]="isShowMenu ? '250px' : '0px'">
     <app-header></app-header>
-    <app-menu-top></app-menu-top>
+    <app-menu-top (sendEventToParent)="listenEventFromChild($event)" ></app-menu-top>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
-</div>
+</div><ngx-spinner [fullScreen] = "true" type="ball-scale-multiple" bdColor="rgba(220, 237, 255, 0.8)" color="#0b499c"></ngx-spinner>
