--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -3,8 +3,9 @@
       <div class="row">
         <div class="col-xs-12">
           <ul>
-            <li class="home"> <a title="Go to Home Page" [routerLink]="['/chi-tiet']" [queryParams]="{slug: product?.productNameSlug}" routerLinkActive="router-link-active" >Home</a><span>&raquo;</span></li>
-            <li class=""> <a title="Go to Home Page" href="shop_grid.html">{{categoryName}}</a><span>&raquo;</span></li>
+            <li class="home"> <a title="Go to Home Page" [routerLink]="['/']" routerLinkActive="router-link-active" >Home</a><span>&raquo;</span></li>
+            <li class="home"> <a [routerLink]="['/chi-tiet']" [queryParams]="{slug: product?.productNameSlug}" routerLinkActive="router-link-active" >Chi tiết</a></li>
+            <li class=""> <a href="shop_grid.html">{{categoryName}}</a><span>&raquo;</span></li>
             <li><strong>{{product?.productName}}</strong></li>
           </ul>
         </div>
@@ -203,8 +204,8 @@
                   </div>
                 </div>
                 <div class="tab-pane fade" id="product_video">
-                  <div class="">
-                    <iframe [width]="840" height="840px" [src]="urlVideoSafe"  frameborder="0" allowfullscreen></iframe>
+                  <div class="video-detail">
+                    <iframe width="100%" height="300" [src]="product?.video | safe "  frameborder="0" allowfullscreen></iframe>
                   </div>
                 </div>
                
