--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
 <div id="page" [style.left]="isShowMenu ? '250px' : '0px'">
     <app-header></app-header>
     <app-menu-top (sendEventToParent)="listenEventFromChild($event)" ></app-menu-top>
-    <router-outlet></router-outlet>
+    <router-outlet (activate)="onActivate($event)"></router-outlet>
     <app-footer></app-footer>
-</div><ngx-spinner [fullScreen] = "true" type="ball-scale-multiple" bdColor="rgba(220, 237, 255, 0.8)" color="#0b499c"></ngx-spinner>
+</div>
+<scroll-top></scroll-top>
+<ngx-spinner [fullScreen] = "true" type="ball-scale-multiple" bdColor="rgba(220, 237, 255, 0.8)" color="#0b499c"></ngx-spinner>
