--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -53,8 +53,9 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-md-3 col-xs-12">
-          <div class="footer-logo"><a href="index.html"><img src="./../assets/images/footer-logo.png" alt="fotter logo"></a> </div>
-          <p>Lorem Ipsum is simply dummy text of the print and typesetting industry. Ut pharetra augue nec augue. Nam elit agna, endrerit sit amet.</p>
+          <div class="footer-logo logoImg"><a href="index.html"><img [src]="urlLogo" alt="fotter logo"></a> </div>
+          <p>
+          </p>
           <div class="social">
             <ul class="inline-mode">
               <li class="social-network fb"><a title="Connect us on Facebook" target="_blank" href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
