--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -88,9 +88,9 @@
                   <div class="cart-plus-minus">
                     <label for="qty">Số lượng:</label>
                     <div class="numbers-row">
-                      <div onClick="var result = document.getElementById('qty'); var qty = result.value;" class="dec qtybutton"><i class="fa fa-minus">&nbsp;</i></div>
-                      <input type="text" class="qty" title="Qty" value="1" maxlength="12" id="qty" name="qty">
-                      <div onClick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty )) result.value++;return false;" class="inc qtybutton"><i class="fa fa-plus">&nbsp;</i></div>
+                      <div (click)="decreaseQuantity()" class="dec qtybutton"><i class="fa fa-minus">&nbsp;</i></div>
+                      <input type="text" class="qty" [(ngModel)]="quantity" title="Qty" value="1" maxlength="12" id="qty" name="qty">
+                      <div (click)="increaseQuantity()" class="inc qtybutton"><i class="fa fa-plus">&nbsp;</i></div>
                     </div>
                   </div>
                   <button class="button pro-add-to-cart" title="Thêm vào giỏ" type="button"><span><i class="fa fa-shopping-basket"></i> Thêm vào giỏ</span></button>
@@ -98,8 +98,8 @@
               </div>
               <div class="product-cart-option">
                 <ul>
-                  <li><a href="#"><i class="fa fa-heart-o"></i><span>Add to Wishlist</span></a></li>
-                  <li><a href="#"><i class="fa fa-link"></i><span>Add to Compare</span></a></li>
+                  <li><a href="#"><i class="fa fa-heart-o"></i><span>Thêm vào yêu thích</span></a></li>
+                  <li><a href="#"><i class="fa fa-link"></i><span>Đối chiếu</span></a></li>
                   <li><a href="#"><i class="fa fa-envelope"></i><span>Email to a Friend</span></a></li>
                 </ul>
               </div>
